src/parser/snapshots/nox__parser__tests__functions__anonymous.snap
---
source: src/parser/tests.rs
expression: "(chunk.code, &chunk.functions[0].code, &chunk.functions[0].functions[0].code)"
---
(
    [
        ReadFunction(0),
        WriteGlobal(0),
        PushNil,
        Return,
    ],
    [
        ReadConstant(0),
        WriteLocal(0),
        ReadFunction(0),
        ReadConstant(0),
        ReadConstant(1),
        Call(2),
        Return,
        PushNil,
        Return,
    ],
    [
        ReadCaptured(0),
        ReadLocal(0),
        Add,
        ReadLocal(1),
        Add,
        Return,
        PushNil,
        Return,
    ],
)
